[package]
name = "pixel_caster"
description = "Cast pixels to and from the screen by managing their RGBA values. Import characters from .png files"
keywords = ["screen", "cast", "retrieve", "pixel", "RGBA"]
version = "1.0.5"
edition = "2021"
authors = ["IVAN MK7 <ivan@mk7.tech>"]
repository = "https://github.com/IVAN-MK7/pixel_caster/"
readme = "README.md"
categories = ["os::windows-apis"]
license = "MIT"
[target.'cfg(target_os = "linux")'.package] # TODO: fix, it gets ignored on windows, but not applied on linux
build = "src/build.rs"

# for performance (on Windows OS): "$env:RUSTFLAGS = '-Ctarget-cpu=native'; cargo run --release", and uncomment the lines below
#[profile.release]
#lto = "fat"
#codegen-units = 1
# end for performance
#default-run = "performance_test"
#[[bin]]
#name = "main"
#path = "src/main.rs"

[lib]
name = "pixel_caster"
path = "src/lib.rs"

[[example]]
name = "get_pixels_bytes"
path = "examples/get_pixels_bytes.rs"

[[example]]
name = "send_bytes_to_pixels"
path = "examples/send_bytes_to_pixels.rs"

[[example]]
name = "clone_pixels_on_screen"
path = "examples/clone_pixels_on_screen.rs"

[[example]]
name = "send_bytes_to_pixels_with_max_alpha"
path = "examples/send_bytes_to_pixels_with_max_alpha.rs"

[[example]]
name = "send_pixels_hiding_specific_color"
path = "examples/send_pixels_hiding_specific_color.rs"

[[example]]
name = "text_from_png_chars_sample_to_screen"
path = "examples/text_from_png_chars_sample_to_screen.rs"

[[test]]
name = "performance_test"
path = "tests/performance_test.rs"

[dependencies]
image = { version = "0.25.1", optional = true }
lazy_static = { version = "1.5.0", optional = true }
#pixel_caster = { path = "../pixel_caster", default-features = false  } default-features = false : to not use the pixels_string feature (and its relative dependencies/optional features, like the "image" crate). path instead of version to load the locally store crate

serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21.0"

[dev-dependencies]
eager = "0.1.0"
paste = "1.0.15"


[features]
default = ["pixels_string"]
# Defines a feature named `pixels_string` that does not enable any other features, but enables the optional dependencies "image" and "lazy_static" crates. Enables the feature by setting it as default
pixels_string = ["dep:image", "dep:lazy_static"]


[target.'cfg(windows)'.dependencies]
libc = "0.2.155"
[dependencies.windows]
version = "0.58.0"

features = [
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]
